--- a/public/index.html
+++ b/public/index.html
@@ -752,7 +752,8 @@
 <p>From Wikipedia: The law of the unconscious statistician, or <em>LOTUS</em>, is a theorem used to calculate the expected value of a function $g(X)$ of a random variable $X$ when one knows the probability distribution of $X$ but one does not know the distribution of $g(X)$:
 $$
 E[g(X)]=\int_{-\infty}^{\infty}g(X)f_X(x)dx
-$$</p>
+$$
+This proposition is known as the law of the unconscious statistician because of a purported tendency to use the identity without realizing that it must be treated as the result of a rigorously proved theorem, not merely a definition.</p>
 
     </div>
 
