--- a/public/index.html
+++ b/public/index.html
@@ -749,6 +749,7 @@
 
     <div class="article-style">
       <p>I am a PhD student in Machine Learning at OnePlanet Research Center and Donders Institute for Brain, Cognition and Behaviour. My research interests include Variational Inference, Normalizing Flows and Reinforcement Learning.</p>
+<p>After a short carreer as professional Rugby player, and a couple of years as a DJ, I decided to study Computer Engineer, with the goal to specialize in audio and sound engineering. After watching the movie <a href="https://www.imdb.com/title/tt0470752/" target="_blank" rel="noopener">Ex Machina</a>, I decided to study Machine Learning and AI instead, without really knowing what it all was about. I moved to Stockholm in 2017 for a Master&rsquo;s degree in Machine Learning at <a href="https://www.kth.se/en" target="_blank" rel="noopener">KTH</a>, and then worked as a Machine Learning engineer for the amazing startup <a href="https://modulai.io/" target="_blank" rel="noopener">Modulai</a>. In December 2020 I moved to Nijmegen, in the Netherlands, to start a PhD in Probabilistic Machine Learning, becoming somehow a <em>statistician</em> (an unconscious one).</p>
 <p>From Wikipedia: The law of the unconscious statistician, or <em>LOTUS</em>, is a theorem used to calculate the expected value of a function $g(X)$ of a random variable $X$ when one knows the probability distribution of $X$ but one does not know the distribution of $g(X)$:
 $$
 E[g(X)]=\int_{-\infty}^{\infty}g(X)f_X(x)dx
